--- a/TEST_GAME/main.css
+++ b/TEST_GAME/main.css
@@ -20,3 +20,27 @@
     border-radius: 10px;
     text-align: center;
 }
+
+
+#overlay2 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none; /* Ẩn ban đầu */
+    justify-content: center;
+    align-items: center;
+}
+
+#message2 {
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 48px;
+    color: firebrick;
+    font-weight: bold;
+    font-style: Arial;
+}
