--- a/TEST_GAME/main.css
+++ b/TEST_GAME/main.css
@@ -22,6 +22,26 @@
 }
 
 
+#overlay_B {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none; /* Ẩn ban đầu */
+  justify-content: center;
+  align-items: center;
+}
+
+#message_B {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+
 #overlay2 {
     position: fixed;
     top: 0;
@@ -44,3 +64,107 @@
     font-weight: bold;
     font-style: Arial;
 }
+
+
+.button1 {
+    position: fixed;
+    top: 20px; /* Điều chỉnh vị trí theo y */
+    right: 20px; /* Điều chỉnh vị trí theo x */
+    z-index: 1; /* Đảm bảo nút hiển thị trên top của mọi thứ khác */
+  }
+  
+  
+  
+  .button{
+    position: fixed;
+    top: 80px; /* Điều chỉnh vị trí theo y */
+    right: 20px; /* Điều chỉnh vị trí theo x */
+    z-index: 1; /* Đảm bảo nút hiển thị trên top của mọi thứ khác */
+  }
+  #resumeBtn {
+    position: fixed;
+    top: 140px; /* Điều chỉnh vị trí theo y */
+    right: 20px; /* Điều chỉnh vị trí theo x */
+    z-index: 1; /* Đảm bảo nút hiển thị trên top của mọi thứ khác */
+  }
+  
+  .button1 button {
+    padding: 10px 20px;
+    background-color: #333;
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+
+  #resumeBtn button {
+    padding: 10px 20px;
+    background-color: #333;
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+  .button button {
+    padding: 10px 20px;
+    background-color: #333;
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+
+
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+canvas {
+    border: 1px solid black;
+}
+
+.overlay_Die {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.game-over {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.game-over h1 {
+    color: red;
+    font-size: 36px;
+    margin-bottom: 20px;
+}
+
+.game-over button {
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.game-over button:hover {
+    background-color: darkred;
+}
+  
+  
